basic chat functionality

--- a/app/less/app.less
+++ b/app/less/app.less
@@ -1,6 +1,12 @@
-@bg-color: #99aa33;
+@bg-color: #fff;
 
 body{
   background-color: @bg-color;
 }
 
+#messages{
+  border: 2px solid gray;
+  background-color: white;
+  height: 500px;
+  border-radius: 10px;
+}
